--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@hello-pangea/dnd": "^18.0.1",
     "@stripe/react-stripe-js": "^3.1.1",
     "@tanstack/react-query": "^5.62.11",
     "axios": "^1.7.9",
@@ -25,7 +26,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.23.0",
     "react-spinners": "^0.15.0",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
