--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.23.0",
     "react-spinners": "^0.15.0",
     "recharts": "^2.15.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
