--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.9",
     "daisyui": "^4.12.23",
     "firebase": "^11.1.0",
+    "lottie-react": "^2.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-date-range": "^2.0.1",
@@ -24,6 +25,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
+    "react-lottie": "^1.2.10",
     "react-router-dom": "^6.23.0",
     "react-spinners": "^0.15.0",
     "recharts": "^2.15.0",
